fix: overflow card title

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -2427,6 +2427,12 @@ textarea::placeholder {
     @extend %text-3xl-font-bold;
     color: var(--text-primary);
     text-align: left;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
 }
 
 .card__description {
@@ -2435,6 +2441,7 @@ textarea::placeholder {
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
     -webkit-box-orient: vertical;
 }
 
